// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/AppContainer Routes should render  1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  isSignedIn={true}
>
  <withApollo(withRouter(ContextProvider))>
    <ErrorBoundary>
      <Toasts>
        <Switch>
          <Route
            component={[Function]}
            exact={true}
            path="/sign-in"
          />
          <InnerComponent
            component={[Function]}
            exact={true}
            path="/"
          />
          <RedirectRoute
            from="/questionnaire/:questionnaireId/design/:sectionId/:pageId"
            to="/q/:questionnaireId/page/:pageId/design"
          />
          <RedirectRoute
            from="/questionnaire/:questionnaireId/design/:sectionId"
            to="/q/:questionnaireId/section/:sectionId/design"
          />
          <InnerComponent
            component={[Function]}
            exact={false}
            path="/q/:questionnaireId/:entityName?/:entityId?/:tab?/:modifier?"
          />
          <Route
            component={[Function]}
            exact={true}
            path="*"
          />
        </Switch>
      </Toasts>
    </ErrorBoundary>
  </withApollo(withRouter(ContextProvider))>
</Router>
`;

exports[`containers/AppContainer should render 1`] = `
<AppContainer>
  <ApolloProvider
    client={
      Object {
        "query": [MockFunction],
        "readQuery": [MockFunction],
      }
    }
  >
    <Provider
      store={
        Object {
          "dispatch": [MockFunction],
          "getState": [MockFunction],
          "subscribe": [MockFunction],
        }
      }
    >
      <Routes
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "createHref": [Function],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
      />
    </Provider>
  </ApolloProvider>
</AppContainer>
`;
